Jann 30/objects/ApprovalProcess__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalProcessLevel__c</fullName>
        <label>Approval Process Level</label>
        <picklist>
            <picklistValues>
                <fullName>1. Key Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Senior Executive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApprovalProcessRouting__c</fullName>
        <label>Approval Process Routing</label>
        <picklist>
            <picklistValues>
                <fullName>Parallel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sequential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFA</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipLabel>Approval Processes</relationshipLabel>
        <relationshipName>Approval_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Approval Process</label>
    <nameField>
        <displayFormat>AP#-{00000}</displayFormat>
        <label>Approval Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Processes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>